2009-09-08  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Mark site-gentoo.el as
	buffer-read-only, in order to prevent unintentional edits.
	(elisp-make-autoload-file, elisp-site-regen): Add a null string
	to inhibit local variables detection in the eclass file itself.

2009-08-24  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (elisp_pkg_setup): We compare major versions only,
	so there's no need for versionator.eclass.
	(inherit): Don't inherit versionator.

2009-04-08  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-file-install): Suppress error
	message if cp source and destination are identical.

2009-03-29  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (elisp_src_unpack): Change directory to S before
	calling src_prepare.

2009-03-26  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (RDEPEND): Avoid unnecessary code duplication.

	* elisp-common.eclass (elisp-site-file-install): Automagically
	insert an empty first line and a header comment if they are
	missing from the file.

2009-03-22  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-comp): Die.
	(elisp-site-file-install): Allow for extra version identifier in
	the name of the source file, i.e. install 50${PN}-gentoo-${PV}.el
	as 50${PN}-gentoo.el. Output a warning if the file name doesn't
	match a pattern that would be recognised by elisp-site-regen.

2009-03-17  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (elisp_src_unpack): Explicitly assign S=${WORKDIR}
	in the "simple elisp" case.

2009-03-15  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (inherit): Inherit eutils. Don't inherit base.
	(elisp_src_prepare): Automatically apply patches in ELISP_PATCHES.

2009-03-07  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Remove all code related
	to site-start.el; it is now installed by emacs-common-gentoo.

2009-02-24  Ulrich Mueller  <ulm@gentoo.org>
